--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "server-express-boocs",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "private": "true",
+  "private": true,
   "scripts": {
     "start": "node ./server.js",
     "start-dev": "nodemon ./server.js"
@@ -13,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "http-errors": "^2.0.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
